# Expense-Tracking-RAG

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
notebook/: Advices.ipynb  Expenses.ipynb  Spending Analysis n anomaly detection.ipynb  Spending Analysis.ipynb
rag/: rag_advisor.py
