[project]
name = "ytrag"
version = "0.1.0"
description = "AI Powered Personal Finance Copilot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.46.0",
    "plotly>=6.0.0",
    "pandas>=2.2.3",
    "numpy>=2.3.0",

    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.7",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
]